<resources>
    <!-- MAIN-->
    <string name="main_tv_current_value_title">Текущее значение:</string>
    <string name="main_tv_current_value_default">none</string>
    <string name="main_tv_saved_values">Сохраненные</string>
    <string name="main_btn_save">Сохранить</string>
    <string name="main_btn_calculator">Калькулятор</string>
    
    <!-- CALCULATOR-->
    <string name="app_name">Calculator</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_minus">-</string>
    <string name="btn_plus">+</string>
    <string name="btn_divide">/</string>
    <string name="btn_multiply">*</string>
    <string name="btn_equels">=</string>
    <string name="btn_reset">C</string>
    <string name="btn_ok">OK</string>
</resources>
