<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unicorn"
    android:backgroundTint="?attr/colorButtonNormal"
    android:backgroundTintMode="screen"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/main_tv_saved_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/main_tv_saved_values" />

    <ListView
        android:id="@+id/main_lv_data"
        android:layout_width="match_parent"
        android:layout_height="200dp">

    </ListView>

    <TextView
        android:id="@+id/main_tv_current_value_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="Текущее значение" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_tv_current_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/main_tv_current_value_default" />

        <Button
            android:id="@+id/main_btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_save" />

    </LinearLayout>

    <Button
        android:id="@+id/main_btn_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/main_btn_calculator" />

</LinearLayout>
